--- a/Public/style.css
+++ b/Public/style.css
@@ -4,11 +4,18 @@ h1{
     display:flex;
     justify-content:center;
 }
+
+h2{
+    display:flex;
+    justify-content:center;
+}
+
 img {
         width:500px;
         height:500px;
         margin-left: 10rem;
     }
+
 nav{
         display:flex;
         justify-content: space-between;
@@ -23,13 +30,5 @@ li {
         padding:10px;
     }
             
-    #quotes{
 
-        display: flex;
-        justify-content: flex-start;
-        flex-direction: column;
-        align-items: flex-start;
-        line-height: 2;
-        margin-left: 20px;
-    
-    }
+
