--- a/Public/style.css
+++ b/Public/style.css
@@ -15,6 +15,12 @@ h2{
     color:cornflowerblue
 }
 
+h3{
+    align-content: center;
+    margin-left: 250px;;
+    color:cornflowerblue
+}
+
 img {
         width:500px;
         height:500px;
